CSS changes, assets expired.

--- a/app/assets/stylesheets/_buttons.css.scss
+++ b/app/assets/stylesheets/_buttons.css.scss
@@ -31,7 +31,7 @@ input[type="submit"] {
 
 .group-section-link {
     &:hover {
-        background-color: #eee;
+        background-color: #ddd;
         cursor: pointer
     }
 }
