--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -14,7 +14,7 @@
 <div class="spacer">
 </div>
 
-<p class="normal"><%= link_to 'New stories', new_story_path %></p>
+<p class="normal"><%= link_to 'New story', new_story_path %></p>
 
 
 <% if @stories.empty? %>
