More small fixes.

--- a/app/views/groups/_group_show.html.erb
+++ b/app/views/groups/_group_show.html.erb
@@ -4,10 +4,10 @@
       <tr class="listing-header">
         <td class="listing-i-f">Name:</td>
         <td class="listing-i-fl">Description:</td>
-        <td>Number of events</td>
-        <td>Number of tasks</td>
-        <td>Number of stories</td>
-        <td>Number of ind. updates</td>
+        <td>Events</td>
+        <td>Tasks</td>
+        <td>Stories</td>
+        <td>Indicators</td>
         <td class="listing-i-f">Actions</td>
       </tr>
 
