Update new css, bigger pictures, more detail

--- a/app/assets/stylesheets/_nav.css.scss
+++ b/app/assets/stylesheets/_nav.css.scss
@@ -13,6 +13,11 @@ nav.top-menu a {
     color: #EEE;
 }
 
+a.blue {
+    font-weight: bold;
+    color: #8A8AAD;
+}
+
 /* Navigation */
 
 
@@ -24,7 +29,7 @@ nav.top-menu {
 nav.main-menu {
     float: left;
     height: 25px;
-    
+
 }
 
 nav.footer-menu {
