Small visual tweaks.

--- a/app/views/groups/_group_show.html.erb
+++ b/app/views/groups/_group_show.html.erb
@@ -58,7 +58,7 @@
       <%= semantic_form_for :category, method: :post, url: exports_path do |f| %>
         <%= f.inputs do %>
           <%= f.input :group_object, label: "Select type ->", collection: ['Event', 'Task', 'Measurement', 'Story'], include_blank: true, required: false %>
-          <%= f.input :group_id, as: :hidden, value: group.id %>
+          <%= f.input :group_id, as: :hidden, input_html: { value: group.id } %>
         <% end %>
         <%= f.actions do %>
           <%= f.action :submit, as: :button, label: 'Export' %>
