--- a/app/views/users/_form_fields.html.erb
+++ b/app/views/users/_form_fields.html.erb
@@ -12,3 +12,5 @@
     <%= f.action :submit, as: :button, label: 'Submit' %>
   <% end %>
 <% end %>
+
+<p>API Key: <strong><%= @user.api_key %></strong></style>
