--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,33 +2,21 @@
   <%= stylesheet_link_tag 'static_pages.css' %>
 <% end %>
 
-<section class="fold container">
+<section class="fold">
+  <div class="container">
 
-  <div class="spacer">
-  </div>
-
-  <div class="home-page-form drop-shadow">
-    <h1 class="home-page">
-      SEE YOUR ORGANISATION PERFORMING
-    </h1>
-    <br />
-    <h3 class="home-page-top">
-      Effectively manage field teams and roaming workers using our easy-to-use platform.<br/>
-      We save you time and effort, simple as that.
-    </h3>
-  </div>
-
-  <div class="spacer">
-  </div>
-
-  <div class="photo-mosaic">
-    <div class="photo-main">
-      <%= image_tag("FrontPage.png", alt: "Photo", class: "photo") %>
+    <div class="home-page-form">
+      <h1 class="home-page">
+        A SIMPLER REPORTING TOOL <br />FOR A MEDIA-RICH WORLD
+      </h1>
+      <br />
+      <h3 class="home-page-top">
+        Use images, then add words and audio to provide feedback, measure results, tell a story.
+      </h3>
     </div>
-  </div>
 
-  <div class="spacer">
   </div>
+  <span class="photo-credit">&copy; <a href="https://www.flickr.com/photos/128539140@N03/">Jake Stimpson</a></span>
 </section>
 
 <section class="features">
@@ -36,12 +24,12 @@
     <div class="heading-block">
       <h2 class="home-page">Features</h2>
     </div>
-
     <div class="spacer">
     </div>
-
     <div class="feature-heading">
-      <h1>A web and mobile tool used to manage and report the "on the ground" operations reality through tasks, stories and events.</h1>
+      <h1>Ease of use that gets you up and running in minutes.<br /><br />
+        Rich information for the most complex and nuanced reporting.
+      </h1>
     </div>
 
     <div class="spacer">
@@ -49,11 +37,11 @@
 
     <div class="feature-row">
       <div class="feature-block">
-        Create functional teams and allocate users to multiple teams
+        Create and see team-based stories, events, tasks, indicator measurements
       </div>
       <div class="feature-block dotted-right">
         <div class="feature-image">
-          <%= image_tag("icons/Person.png", alt: "Person") %>
+          <%= image_tag("icons/List.png", alt: "List") %>
         </div>
       </div>
       <div class="feature-block">
@@ -62,32 +50,32 @@
         </div>
       </div>
       <div class="feature-block">
-        Create your own types, statuses and priority levels for tasks and events
+        Create your own statuses, priority levels, event types, story domains, indicators
       </div>
       <div class="clear"></div>
     </div>
     <div class="feature-row">
       <div class="feature-block even">
         <div class="feature-image">
-          <%= image_tag("icons/List.png", alt: "List") %>
+          <%= image_tag("icons/Person.png", alt: "Person") %>
         </div>
       </div>
       <div class="feature-block even">
-        All users can create and see team-based stories, events and tasks
+        Create functional teams and allocate users to multiple teams
       </div>
       <div class="feature-block even">
-        Import kml files with geolocated features for each team
+        Use images as the conerstone of your reporting.
       </div>
       <div class="feature-block even">
         <div class="feature-image">
-          <%= image_tag("icons/Globe.png", alt: "Globe") %>
+          <%= image_tag("icons/Camera.png", alt: "Camera") %>
         </div>
       </div>
       <div class="clear"></div>
     <div>
     <div class="feature-row">
       <div class="feature-block">
-        Automatic geolocation of stories, events and tasks based on a simple 'location' field
+        Automatic geolocation of reporting items
       </div>
       <div class="feature-block dotted-right">
         <div class="feature-image">
@@ -116,18 +104,18 @@
         Layouts designed for tablets and mobile phones
       </div>
       <div class="feature-block even">
-        Attach photos to both events and tasks
+        Import kml files with geolocated features for each team
       </div>
       <div class="feature-block even">
         <div class="feature-image">
-          <%= image_tag("icons/Camera.png", alt: "Camera") %>
+          <%= image_tag("icons/Globe.png", alt: "Globe") %>
         </div>
       </div>
       <div class="clear"></div>
     </div>
     <div class="feature-row">
       <div class="feature-block">
-        SMS-in functionality for both events and stories in a simple format (coming soon)
+        Dynamic text recognition and theme identification to label your images (coming soon)
       </div>
       <div class="feature-block dotted-right">
         <div class="feature-image">
