--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -2,9 +2,10 @@
 
 .home-page-form {
   height: auto;
-  margin: 5px 0 5px 0;
+  margin: 100px 0 200px 0;
   padding: 10px;
   background-color:  #8C8C8C;
+  opacity: 0.9;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
@@ -43,7 +44,7 @@ h3.home-page-top {
 }
 
 .feature-heading {
-  padding: 80px;
+  padding: 30px 70px;
   border-bottom: solid 1px #ddd;
   text-align: center;
   h1 {
