--- a/app/assets/stylesheets/_layout.css.scss
+++ b/app/assets/stylesheets/_layout.css.scss
@@ -99,6 +99,8 @@ div.header-main {
 
 .heading-block-in {
     background-color: #EAEAEA;
+    padding-right: 10px;
+    height: 32px;
 }
 
 .heading-block {
@@ -108,11 +110,6 @@ div.header-main {
     -webkit-border-radius: 4px;
     height: 45px;
 }
-
-.heading-block-in {
-    height: 40px;
-}
-
 
 .footer-wrapper {
     text-align: center;
@@ -194,6 +191,10 @@ br.clear {
     -moz-box-shadow: 1px 1px 2px hsla(0,0%,0%,.3);
     -webkit-box-shadow: 1px 1px 1px hsla(0,0%,0%,.3);
     box-shadow: 1px 1px 1px hsla(0,0%,0%,.3);
+}
+
+#group-section-dashboard {
+    display: block;
 }
 
 #group-section-update-feed {
