--- a/app/views/groups/_group_show.html.erb
+++ b/app/views/groups/_group_show.html.erb
@@ -29,29 +29,11 @@
   <div class="spacer">
   </div>
 
-  <div class="heading-block-in group-section-link" data-group-section-id="dashboard">
-    <h2>Dashboard</h2>
-  </div>
-
-  <div class="group-section" id="group-section-dashboard">
-    <% if group.incivents.count == 0 && group.tasks.count == 0 && group.stories.count == 0 && group.measurements.count == 0 %>
-      <div class="general-form">
-        <p class="normal">There are no events, tasks or stories in this team.</p>
-      </div>
-    <% else %>
-      <div id="google_map_section-<%= group.id %>" data-kml="<%= attachment_url(group.geo_info) %>" data-url="<%= group_feature_urls(group) %>" data-name="<%= group_feature_names(group) %>" data-lat="<%= group_lats(group) %>" data-long="<%= group_longs(group) %>">
-      </div>
-    <% end %>
-  </div>
-
   <% unless group.updates.empty? %>
 
-    <div class="spacer">
-    </div>
-
-
     <div class="heading-block-in group-section-link" data-group-section-id="update-feed">
-      <h2>Update feed</h2>
+      <h2>Team updates</h2>
+      <span class="expand">expand &darr;</span>
     </div>
 
     <div class="group-section" id="group-section-update-feed">
@@ -66,6 +48,26 @@
       <% end %>
       <%= render group.updates.order(created_at: :desc) %>
     </div>
+
+    <div class="spacer">
+    </div>
+
   <% end %>
+
+  <div class="heading-block-in group-section-link" data-group-section-id="dashboard">
+    <h2>Map</h2>
+    <span class="expand"></span>
+  </div>
+
+  <div class="group-section" id="group-section-dashboard">
+    <% if group.incivents.count == 0 && group.tasks.count == 0 && group.stories.count == 0 && group.measurements.count == 0 %>
+      <div class="general-form">
+        <p class="normal">There are no events, tasks or stories in this team.</p>
+      </div>
+    <% else %>
+      <div id="google_map_section-<%= group.id %>" data-kml="<%= attachment_url(group.geo_info) %>" data-url="<%= group_feature_urls(group) %>" data-name="<%= group_feature_names(group) %>" data-lat="<%= group_lats(group) %>" data-long="<%= group_longs(group) %>">
+      </div>
+    <% end %>
+  </div>
 
 </div>
