--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -17,7 +17,7 @@
         <% if @new_account %>
             <h3>Thank you for your interest in joining us. We will get in touch in 24 hours.</h3>
         <% else %>
-            <h3>Want to discuss our offering? Leave us a message and we will get in touch in 24 hours. Note: We personally suffer from spamming every day and we will not share your email adress with anyone. Ever.</h3>
+            <h3>Want to discuss our offering? Leave us a message and we will get in touch in 24 hours. <br /> Note: We will not share your email adress with anyone. Ever.</h3>
         <% end %>
 	<% else %>
         <h3>For support, billing and general enquiries contact us using the form below.</h3>
