--- a/app/views/updates/_update.html.erb
+++ b/app/views/updates/_update.html.erb
@@ -12,6 +12,7 @@
             <h3><%= update.updatable_type.capitalize %></h3>
             <br />
             <strong><%= update.detail %></strong>
+            <%= update.updatable.description %>
             <% if update.updatable.location %>
                 <br />
                 Location: <%= update.updatable.location %>
