--- a/app/views/static_pages/pricing_signup.html.erb
+++ b/app/views/static_pages/pricing_signup.html.erb
@@ -22,7 +22,14 @@
 			<br /></br />
 		</h3>
 		<div class="large_button_container">
-			<%= link_to "New account ", contact_path(new_account: true), class: 'large_button' %>
+			<%= semantic_form_for :account, method: :get, url: contact_path, class: 'button_large' do |f| %>
+				<%= f.inputs do %>
+					<%= f.input :new_account, input_html: {value: true}, as: :hidden  %>
+				<% end %>
+			  	<%= f.actions do %>
+			    	<%= f.action :submit, as: :button, label: 'New account' %>
+			  	<% end %>
+			<% end %>
 		</div>
 		<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 	</div>
