Cosmetic site changes done.

--- a/app/views/layouts/_footer_menu.html.erb
+++ b/app/views/layouts/_footer_menu.html.erb
@@ -13,7 +13,7 @@
         <p>
             Site &copy; 2011-<%= Date.today.year %> ImpactReady/Raoul de Villiers. <br />
             All rights reserved.<br />
-            Image &copy; <a href="https://www.flickr.com/photos/128539140@N03/">Jake Stimpson</a>
+            <%= yield(:footer) %>
         </p>
 
     </div>
