--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,11 +7,11 @@
 
     <div class="home-page-form">
       <h1 class="home-page">
-        A SIMPLER REPORTING TOOL <br />FOR A MEDIA-RICH WORLD
+        AN IMMERSIVE REPORTING TOOL <br />FOR SOCIAL CHANGE
       </h1>
       <br />
       <h3 class="home-page-top">
-        Use images, then add words and audio to provide feedback, measure results, tell a story.
+        Engage your audience through rich photostories embedded with useful information.
       </h3>
     </div>
 
@@ -133,6 +133,10 @@
     </div>
   </div>
 </section>
+
+<% content_for :footer  do %>
+  Image &copy; <a href="https://www.flickr.com/photos/128539140@N03/">Jake Stimpson</a>
+<% end %>
 
 
 
