--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,4 +1,4 @@
-<%= content_for(:head) do %>
+<% content_for(:head) do %>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtJp-fDHOROELFhGj3s0HNVwq0anZlcFM"></script>
 <% end %>
 <%= javascript 'googleearth' %>
