--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -100,7 +100,7 @@
         </div>
       </div>
       <div class="feature-block even">
-        Layouts designed for tablets and mobile phones
+        Android app for super-fast offline capturing
       </div>
       <div class="feature-block even">
         Import kml files with geolocated features for each team
