Measurement language clarified, tests updated.

--- a/app/views/measurements/index.html.erb
+++ b/app/views/measurements/index.html.erb
@@ -8,7 +8,7 @@
 </div>
 
 <div class="heading-block">
-  <h2>All indicators</h2>
+  <h2>All indicator measurements</h2>
 </div>
 
 <div class="spacer">
