--- a/app/views/measurements/new.mobile.erb
+++ b/app/views/measurements/new.mobile.erb
@@ -1,5 +1,5 @@
 <div class="mobile-heading-block">
-    <h2>New indicator update</h2>
+    <h2>New indicator measurement</h2>
 </div>
 <div class="mobile-form">
   <%= semantic_form_for @measurement, html: {multipart: true} do |f| %>
