Renamed to TeamReady.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
     <div class="container">
       <% if signed_in? %>
         <div class="top-name">
-          protea.io | Hello <strong><%= current_user.first_name %>!</strong>
+          TeamReady | Hello <strong><%= current_user.first_name %>!</strong>
         </div>
       <% end %>
       <nav class="top-menu">
