--- a/app/views/groups/_group_show.html.erb
+++ b/app/views/groups/_group_show.html.erb
@@ -46,7 +46,7 @@
           <%= f.action :submit, as: :button, label: 'Export' %>
         <% end %>
       <% end %>
-      <%= render group.updates.order(created_at: :desc) %>
+      <%= render group.updates.order(created_at: :desc).limit(15) %>
     </div>
 
     <div class="spacer">
