--- a/app/views/updates/_update.html.erb
+++ b/app/views/updates/_update.html.erb
@@ -9,10 +9,10 @@
     </div>
     <div class="update-body">
         <p>
-            <h3><%= update.updatable_type.capitalize %></h3>
+            <h3><%= update.updatable_type == 'incivent' ? 'Event' : update.updatable_type.capitalize %></h3>
             <br />
-            <strong><%= update.detail %></strong>
-            <%= update.updatable.description %>
+            <strong><%= update.detail %></strong><br />
+            Description: <%= update.updatable.description %>
             <% if update.updatable.location %>
                 <br />
                 Location: <%= update.updatable.location %>
