--- a/app/views/notification/notify_task.text.erb
+++ b/app/views/notification/notify_task.text.erb
@@ -1,9 +1,9 @@
 Hi <%= @user.first_name %>,
 
-A task has been assigned to you in the team '<%= @group.name %>' of which you are a member.
+A new task has been assigned to you relating to the event '<%= @incivent.name %>'.
 Please click on the hyperlink below for more details:
 
-<%= @task_url %>
+<%= @incivents_url %>
 
 Kind regards,
 The ImpactReady Team
