Small fix to display items.

--- a/app/views/updates/_update.html.erb
+++ b/app/views/updates/_update.html.erb
@@ -1,37 +1,39 @@
-<div class="update-item" data-updatable-type="<%= update.updatable_type %>">
-    <% if update.updatable.image %>
-        <div class="update-image">
-            <%= image_tag update.updatable.image.url(:medium), class: "feed" %>
+<% if update.updatable %>
+    <div class="update-item" data-updatable-type="<%= update.updatable_type %>">
+        <% if update.updatable.image %>
+            <div class="update-image">
+                <%= image_tag update.updatable.image.url(:medium), class: "feed" %>
+            </div>
+        <% end %>
+        <div class="update-time">
+            <%= time_tag update.created_at %>
         </div>
-    <% end %>
-    <div class="update-time">
-        <%= time_tag update.created_at %>
+        <div class="update-body">
+            <p>
+                <h3><%= update.updatable_type == 'incivent' ? 'Event' : update.updatable_type.capitalize %></h3>
+                <br />
+                <strong><%= update.detail %></strong><br />
+                Description: <%= update.updatable.description %>
+                <% if update.updatable.location %>
+                    <br />
+                    Location: <%= update.updatable.location %>
+                <% end %>
+                <% if update.updatable.longitude && update.updatable.latitude %>
+                    <br />
+                    Logitude: <%= update.updatable.longitude %> | Latitude: <%= update.updatable.latitude %>
+                <% end %>
+                <% if update.updatable_type == 'Task' %>
+                    <br />
+                    Created by: <%= update.updatable.raised_user.full_name %>
+                    <br />
+                    Assigned to: <%= update.updatable.user.full_name %>
+                <% else %>
+                    <br />
+                    Created by: <%= update.updatable.user.full_name %>
+                <% end %>
+                <br />
+                <%= link_to 'More detail', update.updatable, class: 'blue' %>
+            </p>
+        </div>
     </div>
-    <div class="update-body">
-        <p>
-            <h3><%= update.updatable_type == 'incivent' ? 'Event' : update.updatable_type.capitalize %></h3>
-            <br />
-            <strong><%= update.detail %></strong><br />
-            Description: <%= update.updatable.description %>
-            <% if update.updatable.location %>
-                <br />
-                Location: <%= update.updatable.location %>
-            <% end %>
-            <% if update.updatable.longitude && update.updatable.latitude %>
-                <br />
-                Logitude: <%= update.updatable.longitude %> | Latitude: <%= update.updatable.latitude %>
-            <% end %>
-            <% if update.updatable_type == 'Task' %>
-                <br />
-                Created by: <%= update.updatable.raised_user.full_name %>
-                <br />
-                Assigned to: <%= update.updatable.user.full_name %>
-            <% else %>
-                <br />
-                Created by: <%= update.updatable.user.full_name %>
-            <% end %>
-            <br />
-            <%= link_to 'More detail', update.updatable, class: 'blue' %>
-        </p>
-    </div>
-</div>
+<% end %>
