Add only those IDs where a map will be shown.

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -30,7 +30,7 @@
 
 <% else %>
 
-  <div id="ids-for-earth" data-ids="<%= @groups.map(&:id).join(", ") %>">
+  <div id="ids-for-earth" data-ids="<%= @ids_for_earth.join(", ") %>">
   </div>
 
   <div id="group-tabs">
