--- a/app/views/measurements/_measurement.html.erb
+++ b/app/views/measurements/_measurement.html.erb
@@ -1,6 +1,6 @@
 <tr class="listing-item">
   <td class="listing-i-fm"><%= link_to measurement.description, measurement_path(measurement) %></td>
-  <td><%= measurement.type.description %></td>
+  <td><%= measurement.type.description if measurement.type %></td>
   <td><%= time_ago_in_words(measurement.created_at) %> ago</td>
   <% if measurement.location == "" %>
     <td>Unnamed Coordinates</td>
