Emergency bug fixes.

--- a/app/views/updates/_update.html.erb
+++ b/app/views/updates/_update.html.erb
@@ -10,7 +10,7 @@
         </div>
         <div class="update-body">
             <p>
-                <h3><%= update.updatable_type == 'incivent' ? 'Event' : update.updatable_type.capitalize %></h3>
+                <h3><%= update.updatable_type == 'Incivent' ? 'Event' : update.updatable_type.capitalize %></h3>
                 <br />
                 <strong><%= update.detail %></strong><br />
                 Description: <%= update.updatable.description %>
