--- a/app/views/stories/_story_show_detail.html.erb
+++ b/app/views/stories/_story_show_detail.html.erb
@@ -47,7 +47,7 @@
   </div>
   <div class="index-item-image">
     <div class="general-form">
-      <% unless @story.image %>
+      <% if @story.image %>
         <a href="#"><strong>View Image</strong>
           <div>
             <%= image_tag @story.story_image.url(:medium), class: "photo" %>
