Add improvements to tasks js.

--- a/app/assets/javascripts/tasks.js.erb
+++ b/app/assets/javascripts/tasks.js.erb
@@ -1,17 +1,19 @@
 
 $(function(){
-  
+
+  $('#task_group_id').html("<option value=''>Select Group</option>");
+
   $('#task_assigned_user_id').html("<option value=''>Select User</option>");
 
   $('#task_group_id').change(function() {
 
     var data = $('#task_group_id').val();
-                      
+
     $.ajax({ type: "GET",
       url: "/tasks/dynamic_users/",
       data: "user_id=" + data
     });
 
-  });  
+  });
 
 });
